updates to add Docker, Swagger and Get APP and DB run on Docker